styles.css
/* Navbar */
.navbar-brand {
  margin-left: 5rem;
  font-family: 'Dosis', sans-serif;
  font-weight: bold;
  font-size: 1.6rem !important;
  color: white !important;
  white-space: normal !important;
}

@media (max-width: 576px) {
  .navbar-brand {
    margin: auto;
    width: 100%;
    text-align: center;
  }
}
.navbar {
  background-color: #0797b1;
}

.navbar-nav .nav-link {
  color: white !important;
  font-family: 'Dosis', sans-serif;
  font-weight: normal;
  font-size: 1.2rem;
}

.navbar-nav .nav-link:hover {
  color: #9e4c9d !important;
}

.navbar-nav .active {
  color: #862e8d !important;
}

.ms-auto {
  padding-right: 5rem;
}

p a {
  word-wrap: break-word;
}

/* Body */
/* body {
  background-color: #f7eedd !important;
} */

@media (min-width: 1600px) {
  .container {
    max-width: 1500px !important;
  }
}

/* Welcome Message */

#welome-logo {
  width: 50%;
  margin-bottom: 2rem;
}

#welcome-message {
  margin: 5rem;
  font-family: 'Advent Pro', sans-serif;
  font-weight: bold;
  color: #9e4c9d;
}

@media (max-width: 576px) {
  #welcome-message {
    margin: 3rem 1rem;
  }
}

#welcome-message h2 {
  font-size: 3rem;
  font-family: 'Advent Pro', sans-serif;
  font-weight: bold;
  margin-bottom: 2rem;
}

#welcome-message p {
  font-size: 1.4rem;
  font-family: 'Dosis', sans-serif;
  font-weight: 550;
}

.custom-volunteer-btn {
  height: 3.5rem;
  width: 30%;
  min-width: 155px;
  margin-top: 1rem;
  font-size: 1.7rem !important;
  background-color: #0797b1 !important;
  border-color: #0797b1 !important;
  text-decoration: none !important;
}

.custom-volunteer-btn:hover {
  background-color: #50899b !important;
  border-color: #50899b !important;
  text-decoration: none !important;
}

/* Right Column */

#right-column {
  margin: 5rem 1.5rem 0 1.5rem;
  text-align: center;
  min-width: 292px;
}

@media (max-width: 576px) {
  #right-column {
    margin: 0;
  }
}

#right-column .custom-btn {
  display: block;
  width: 80%;
  max-width: 20rem;
  height: 4rem;
  margin: 2rem auto;
  font-size: 1.7rem !important;
  font-family: 'Dosis', sans-serif;
  font-weight: normal;
  color: white;
}

#right-column h3 {
  font-size: 1.8rem;
  font-family: 'Advent Pro', sans-serif;
  font-weight: bold;
  color: #9e4c9d;
  margin-bottom: 1.5rem;
}

#right-column a {
  text-decoration: none;
}

#upcoming-meetups {
  border: 2px solid #9e4c9d;
  border-radius: 10px;
  padding: 20px;
}

.custom-btn {
  background-color: #0797b1 !important;
  border-color: #0797b1 !important;
}

.custom-btn:hover {
  background-color: #50899b !important;
  border-color: #50899b !important;
}

/* Secondary Pages Message */

#main-message {
  margin: 5rem;
  font-family: 'Advent Pro', sans-serif;
  font-weight: bold;
  color: #9e4c9d;
}

@media (max-width: 576px) {
  #main-message {
    margin: 3rem 1rem;
  }
}

#main-message h2 {
  font-size: 3rem;
  font-family: 'Advent Pro', sans-serif;
  font-weight: bold;
  margin-bottom: 2rem;
}

#main-message p {
  font-size: 1.4rem;
  font-family: 'Dosis', sans-serif;
  font-weight: 550;
}

/* TODO why can't I combine this with above p? */
#main-message li {
  font-size: 1.4rem;
  font-weight: 550;
  font-family: 'Dosis', sans-serif;
}

/* Network Tiles */

.network-tile {
  margin-bottom: 20px;
  min-width: 360px;
}

.network-card {
  border: 1px solid #ddd;
  border-radius: 8px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  transition: box-shadow 0.3s ease;
  background-color: white;
  color: #9e4c9d;
}

.network-card:hover {
  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
}

.network-card-img {
  border-radius: 100%;
  max-width: 100%;
  max-height: 150px;
  display: block;
  margin: 25px auto 0 auto;
}

.network-card-body {
  padding: 20px;
  text-align: center;
}

.network-card-body p {
  font-family: 'Dosis', sans-serif;
  font-weight: 550;
}

.network-card-title {
  margin-bottom: 0;
  font-family: 'Advent Pro', sans-serif;
  font-weight: bold;
  font-size: 1.5rem;
}

.network-card .links {
  margin-top: 10px;
  display: flex;
  justify-content: center;
}

.network-card .link {
  margin-right: 10px;
  color: #333;
  text-decoration: none;
}

.network-card .link i {
  /* TODO Make relative */
  font-size: 35px;
  margin: 0 5px;
}

.network-card .link:hover {
  color: #007bff;
}

/* Volunteer Tiles */

.volunteer-tile {
  margin-bottom: 20px;
  min-width: 250px;
  display: flex;
}

.volunteer-card {
  border: 1px solid #ddd;
  border-radius: 8px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  transition: box-shadow 0.3s ease;
  background-color: white;
  flex-grow: 1;
}

.volunteer-card:hover {
  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
}

.volunteer-card-img {
  border-radius: 100%;
  max-width: 100%;
  max-height: 150px;
  display: block;
  margin: 25px auto 0 auto;
}

.volunteer-card-body {
  padding: 20px;
  text-align: center;
}

.volunteer-card-body p {
  font-family: 'Dosis', sans-serif;
  font-weight: 550;
}

.volunteer-card-title {
  margin-bottom: 0;
  font-family: 'Advent Pro', sans-serif;
  font-weight: bold;
  font-size: 1.5rem;
}

.volunteer-card .links {
  margin-top: 10px;
  display: flex;
  justify-content: center;
}

.volunteer-card .link {
  margin-right: 10px;
  color: #333;
  text-decoration: none;
}

.volunteer-card .link i {
  font-size: 35px;
  margin: 0 5px;
}

.volunteer-card .link:hover {
  color: #007bff;
}

/* Upcoming Meetups */

/* Style for event cards */
#event-tiles {
  width: 100%;
}

/* .event-tile {
  margin-bottom: 10px;
} */

/* .event-card {
  border: 1px solid #ccc;
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
} */

.event-card-img {
  max-width: 100%;
  height: auto;
  border-radius: 10px;
}

.event-card-body {
  /* padding: 20px; */
  text-align: left; /* Adjusted text alignment */
}

.event-card-title {
  margin-top: 0;
  /* margin-bottom: 10px; */
  font-family: 'Advent Pro', sans-serif;
  font-weight: bold;
  font-size: 1.4rem;
  color: #9e4c9d;
}

.event-card-body p {
  margin-bottom: 15px;
  font-family: 'Dosis', sans-serif;
  font-weight: 550;
  font-size: 1.1rem;
  color: #862e8d;
}

.event-links {
  margin-top: 10px;
  font-family: 'Dosis', sans-serif;
  font-weight: 550;
}

.event-link {
  display: inline-block;
  margin-right: 10px;
  color: #0797b1;
  text-decoration: none;
  font-size: 1.2rem;
}

.event-link:hover {
  text-decoration: underline;
}

#right-column .custom-event-btn {
  display: block;
  width: 60%;
  /* max-width: 20rem; */
  height: 3.5rem;
  margin: 2rem auto;
  /* TODO CSS varibale, debug why ! */
  font-size: 1.7rem !important;
  font-family: 'Dosis', sans-serif;
  font-weight: normal;
  color: white;
}

.custom-event-btn {
  background-color: #0797b1 !important;
  border-color: #0797b1 !important;
}

.custom-event-btn:hover {
  background-color: #50899b !important;
  border-color: #50899b !important;
}

.a-btn {
  text-decoration: none !important;
}

